# JobPilot-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_EN.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-blog.yml
data/: job_seed.json  user_profile.json
data/sample_jds/: agent_intern_01.txt
eval/: build_eval_cases.py  eval_cases.json  run_eval.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: smoke-ui.mjs
frontend/src/: App.jsx  styles.css
frontend/src/api/: jobpilot.js
frontend/src/components/: ErrorBoundary.jsx
frontend/src/hooks/: useJobPilotRun.js
frontend/src/utils/: jobpilot.js  jobpilot.test.js
portfolio-blog/: README.md  astro.config.mjs
portfolio-blog/src/layouts/: BaseLayout.astro
portfolio-blog/src/lib/: site.js
portfolio-blog/src/pages/: index.astro  (+1 more)
scripts/: export_job_seed.py  init_data.py  start.ps1
src/: __init__.py  api.py  audit_logger.py  document_parser.py  export.py  graph.py  job_recorder.py  job_store.py  llm_client.py  main.py  nodes.py  ocr_service.py  prompts.py  reranker.py  retriever.py  run_control.py  run_manager.py  schemas.py  scorer.py  security.py  state.py  tools.py  trace_logger.py
tests/: test_api.py  test_document_parser.py  test_graph.py  test_job_recorder.py  test_job_store.py  test_llm_client.py  test_main.py  test_nodes.py  test_ocr_service.py  test_reranker.py  test_retriever.py  test_run_manager.py  test_schemas.py  test_scorer.py  test_security.py  test_tools.py  test_trace_logger.py
(+11 files in other folders)
