[project]
name = "jobpilot-agent"
version = "0.1.0"
requires-python = ">=3.10,<3.11"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [".venv", "frontend", "data/vector_store", "outputs", "traces"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"eval/*.py" = ["E402"]
"scripts/*.py" = ["E402"]
